--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,15 +19,11 @@ body {
 }
 
 .line {
-  border: 1px solid #95afc0 ;
+  border: 1px solid #95afc0;
   background-color: #95afc0;
   border-width: 0.1rem;
   width: 50.5rem;
   margin: 0rem 74rem 0rem 4.5rem;
-}
-
-.img {
-  width: 20rem;
 }
 
 .texts {
@@ -53,6 +49,13 @@ h2 {
   cursor: pointer;
 }
 
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 /* media query */
 
 @media (max-width: 415px) and (min-width: 375px) {
@@ -66,10 +69,8 @@ h2 {
     flex-direction: column;
     width: auto;
   }
-  .img {
-    margin-bottom: 2rem;
-  }
   .texts {
+    margin-top: 1rem;
     width: 20rem;
     margin-bottom: 2rem;
   }
@@ -77,7 +78,6 @@ h2 {
     width: 18.5rem;
     margin: auto;
   }
-  
 }
 
 @media (max-width: 376px) and (min-width: 321px) {
